# full-text-search

./: LICENSE  README.md  base-4.16.project  base-4.17.project  base-4.18.project  base-4.19.project  base-4.20.project  changelog  full-text-search.cabal
.github/workflows/: ci.yml  haskell-ci.yml
Data/: SearchEngine.hs
Data/SearchEngine/: Autosuggest.hs  BM25F.hs  DocFeatVals.hs  DocIdSet.hs  DocTermIds.hs  Query.hs  SearchIndex.hs  TermBag.hs  Types.hs  Update.hs
demo/: ExtractDescriptionTerms.hs  ExtractNameTerms.hs  HaddockHtml.hs  HaddockLex.x  HaddockParse.y  HaddockTypes.hs  Main.hs  PackageIndexUtils.hs  PackageSearch.hs
src/Data/: SearchEngine.hs
src/Data/SearchEngine/: DocIdSet.hs  DocTermIds.hs  SearchIndex.hs  TermBag.hs  Update.hs
tests/: Main.hs
tests/Test/Data/SearchEngine/: DocIdSet.hs  TermBag.hs
