name:                full-text-search
version:             0.2.0.0
synopsis:            In-memory full text search engine
description:         An in-memory full text search engine library. It lets you
                     run full-text queries on a collection of your documents.
                     .
                     Features:
                     .
                     * Can search over any type of \"document\".
                       (You explain how to extract search terms from them.)
                     .
                     * Supports documents with multiple fields
                       (e.g. title, body)
                     .
                     * Supports documents with non-term features
                       (e.g. quality score, page rank)
                     .
                     * Uses the state of the art BM25F ranking function
                     .
                     * Adjustable ranking parameters (including field weights
                       and non-term feature scores)
                     .
                     * In-memory but quite compact. It does not keep a copy of
                       your original documents.
                     .
                     It is independent of the document type, so you have to
                     write the document-specific parts: extracting search terms
                     and any case-normalisation or stemming. This is quite
                     easy using libraries such as
                     <http://hackage.haskell.org/package/tokenize tokenize> and
                     <http://hackage.haskell.org/package/snowball snowball>.
                     .
                     For an example, see the code for the
                     <http://hackage.haskell.org/package/hackage-server hackage-server>
                     where it is used for the package search feature.

license:             BSD3
license-file:        LICENSE
author:              Duncan Coutts
maintainer:          Duncan Coutts <duncan@well-typed.com>
copyright:           2013-2014 Duncan Coutts, 2014 Well-Typed LLP
category:            Data, Text, NLP
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:              darcs
  location:          http://code.haskell.org/full-text-search/

library
  exposed-modules:     Data.SearchEngine,
                       Data.SearchEngine.BM25F
  other-modules:       Data.SearchEngine.DocFeatVals,
                       Data.SearchEngine.TermBag,
                       Data.SearchEngine.DocTermIds,
                       Data.SearchEngine.SearchIndex,
                       Data.SearchEngine.DocIdSet
  other-extensions:    BangPatterns,
                       NamedFieldPuns,
                       RecordWildCards,
                       GeneralizedNewtypeDeriving
  build-depends:       base       >=4.5  && <4.7,
                       array      >=0.4  && <0.5,
                       vector     >=0.10 && <0.11,
                       containers >=0.4  && <0.6,
                       text       >=0.11 && <1.2
  default-language:    Haskell2010
  ghc-options:         -Wall
